added: logout route,admin privileges
