# src/routers/authenticationRouter.ts
@@ -1,9 +1,11 @@
 import express from 'express';
 import { loginValidator, registerValidator } from '../middlewares/joi_validation';
 
-import { login, register } from '../controllers/authentication';
+import { login, logout, register } from '../controllers/authentication';
+import { isAuthenticated } from '../middlewares/index';
 
 export default(router:express.Router)=>{
     router.post('/auth/signup',registerValidator,register);
     router.post('/auth/login',loginValidator,login);
+    router.post('/auth/logout',isAuthenticated,logout);
 }
